--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 h1 {
-  @apply text-6xl font-bold;
+  @apply mb-2 text-center text-4xl font-bold text-red-600;
 }
 h2 {
   @apply text-5xl font-bold;
