--- a/app/globals.css
+++ b/app/globals.css
@@ -15,7 +15,7 @@ h3 {
   @apply text-3xl font-bold;
 }
 * {
-  @apply text-white;
+  @apply text-neutral-200;
 }
 body {
   @apply bg-neutral-900;
@@ -25,5 +25,5 @@ img {
   @apply rounded-2xl;
 }
 button {
-  @apply rounded-full px-4 py-2 text-white;
+  @apply rounded-full px-4 py-2 text-neutral-200;
 }
