--- a/app/globals.css
+++ b/app/globals.css
@@ -2,18 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Headings */
 h1 {
-  @apply mb-2 text-center text-4xl font-bold text-red-600;
+  @apply mb-2 text-center text-4xl font-bold text-primary;
 }
 h2 {
-  @apply text-5xl font-bold;
-}
-h2 {
-  @apply text-4xl font-bold;
+  @apply text-4xl font-bold text-primary;
 }
 h3 {
-  @apply text-3xl font-bold;
+  @apply text-3xl font-bold text-primary;
 }
+
+/* Text Styling */
 * {
   @apply text-neutral-200;
 }
@@ -21,13 +21,17 @@ body {
   @apply bg-neutral-900;
 }
 
+/* Images */
 img {
-  @apply rounded-2xl;
-}
-button {
-  @apply rounded-full px-4 py-2 text-neutral-200;
+  @apply rounded-2xl shadow-lg;
 }
 
+/* Buttons */
+button {
+  @apply btn btn-primary rounded-full px-4 py-2 text-neutral-200;
+}
+
+/* Scrollbar Utilities */
 @layer utilities {
   /* Hide scrollbar for Chrome, Safari and Opera */
   .no-scrollbar::-webkit-scrollbar {
