--- a/app/globals.css
+++ b/app/globals.css
@@ -1,16 +1,15 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+@plugin "daisyui";
 
 /* Headings */
 h1 {
-  @apply mb-2 text-center text-4xl font-bold text-primary;
+  @apply text-primary mb-2 text-center text-4xl font-bold;
 }
 h2 {
-  @apply text-4xl font-bold text-primary;
+  @apply text-primary text-4xl font-bold;
 }
 h3 {
-  @apply text-3xl font-bold text-primary;
+  @apply text-primary text-3xl font-bold;
 }
 
 /* Text Styling */
@@ -23,7 +22,10 @@ body {
 
 /* Images */
 img {
-  @apply rounded-2xl shadow-lg;
+  @apply rounded-2xl;
+}
+em {
+  @apply text-primary;
 }
 
 /* Buttons */
@@ -31,15 +33,37 @@ button {
   @apply btn btn-primary rounded-full px-4 py-2 text-neutral-200;
 }
 
-/* Scrollbar Utilities */
-@layer utilities {
-  /* Hide scrollbar for Chrome, Safari and Opera */
-  .no-scrollbar::-webkit-scrollbar {
-    display: none;
-  }
-  /* Hide scrollbar for IE, Edge and Firefox */
-  .no-scrollbar {
-    -ms-overflow-style: none; /* IE and Edge */
-    scrollbar-width: none; /* Firefox */
-  }
+@plugin "daisyui/theme" {
+  name: "flyingspace";
+  default: true;
+  prefersdark: true;
+  color-scheme: "dark";
+  --color-base-100: oklch(14% 0 0);
+  --color-base-200: oklch(20% 0 0);
+  --color-base-300: oklch(26% 0 0);
+  --color-base-content: oklch(97% 0 0);
+  --color-primary: oklch(54% 0.281 293.009);
+  --color-primary-content: oklch(98% 0.016 73.684);
+  --color-secondary: oklch(55% 0.288 302.321);
+  --color-secondary-content: oklch(98% 0.026 102.212);
+  --color-accent: oklch(14% 0 0);
+  --color-accent-content: oklch(100% 0 0);
+  --color-neutral: oklch(43% 0 0);
+  --color-neutral-content: oklch(98% 0 0);
+  --color-info: oklch(54% 0.281 293.009);
+  --color-info-content: oklch(97% 0.014 254.604);
+  --color-success: oklch(64% 0.2 131.684);
+  --color-success-content: oklch(98% 0.031 120.757);
+  --color-warning: oklch(68% 0.162 75.834);
+  --color-warning-content: oklch(98% 0.026 102.212);
+  --color-error: oklch(57% 0.245 27.325);
+  --color-error-content: oklch(97% 0.013 17.38);
+  --radius-selector: 1rem;
+  --radius-field: 1rem;
+  --radius-box: 1rem;
+  --size-selector: 0.25rem;
+  --size-field: 0.25rem;
+  --border: 0.25px;
+  --depth: 1;
+  --noise: 0;
 }
