--- a/app/globals.css
+++ b/app/globals.css
@@ -30,7 +30,7 @@ em {
 
 /* Buttons */
 button {
-  @apply btn btn-primary rounded-full px-4 py-2 text-neutral-200;
+  @apply rounded-full px-4 py-2 text-neutral-200;
 }
 
 @plugin "daisyui/theme" {
